Relax CORS to *.vercel.app and localhost